# CountingNonoverlappingUnfoldings

./: .gitignore  .gitmodules  README.md
.claude/log/: 2026-02-20.md
cpp/edge_relabeling/: CMakeLists.txt
cpp/edge_relabeling/src/: main.cpp
cpp/spanning_tree_zdd/: CMakeLists.txt
cpp/spanning_tree_zdd/src/: BigUInt.hpp  FrontierData.hpp  InvariantCounter.hpp  SpanningTree.cpp  SpanningTree.hpp  SymmetryFilter.hpp  UnfoldingFilter.cpp  UnfoldingFilter.hpp  main.cpp
docs/: PHASE1_EDGE_RELABELING.md  PHASE2_UNFOLDING_EXPANSION.md  PHASE3_GRAPH_DATA_CONVERSION.md  PHASE4_SPANNING_TREE_ENUMERATION.md  PHASE5_FILTERING.md  PHASE6_NONISOMORPHIC_COUNTING.md  PREPROCESS.md  RUN_ALL.md
lib/decompose/: convertEdgePermutation.cpp  decompose.cpp  graph.cpp
python/counting/: __init__.py  __main__.py  cli.py  compute_automorphisms.py
python/drawing/: README.md  __init__.py  __main__.py  cli.py
python/edge_relabeling/: README.md  __init__.py  __main__.py  cli.py  decompose_runner.py  edge_mapper.py  graph_builder.py  grh_generator.py  relabeler.py
python/graph_export/: README.md  __init__.py  __main__.py  __main__edgeset.py  automorphism_builder.py  cli.py  cli_edgeset.py  edge_set_extractor.py  extractor.py  graph_builder.py  grh_generator.py
python/nonisomorphic/: README.md  __init__.py  __main__.py  cli.py  compute_automorphisms.py
python/preprocess/: __init__.py  __main__.py
python/run_all/: __init__.py  __main__.py
python/spanning_tree_zdd/: README.md  __init__.py  __main__.py  cli.py
verification/: CMakeLists.txt  run.py  verify.cpp
(+416 files in other folders)
